--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,7 @@
             </intent-filter>
         </service>
 
-
+        <receiver android:name="PowerReceiver" />
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
