--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,15 +9,20 @@ android {
 
         minSdkVersion 18
         targetSdkVersion 25
-        versionCode 1
+        versionCode 4
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions{
+        checkReleaseBuilds false
+        abortOnError false
     }
 }
 
@@ -29,7 +34,7 @@ dependencies {
 
 
 
-
+    compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.android.support:appcompat-v7:25.1.0'
